# coffee-compass

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
coffee_compass/: __init__.py  app.py
coffee_compass/data/: __init__.py  preprocess.py
coffee_compass/data/raw/: arabica_data.csv
coffee_compass/models/: __init__.py  flavor_predictor.py
coffee_compass/scripts/: train.py  train_with_optimization.py
tests/: __init__.py  conftest.py  pytest.ini  test_flavor_predictor.py  test_integration.py  test_preprocess.py  test_train_script.py
