[project]
name = "coffee-compass"
version = "1.0.0"
description = "A brief description of your project"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Lorenzo Siconolfi", email = "siconolfi.lorenzo@gmail.com"}
]

dependencies = [
    # Add your dependencies here
    "gradio>=5.49.1",
    "jobid>=0.3.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "shap>=0.49.1",
    "xgboost>=3.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py313']

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

# Coverage configuration
[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
